planning_tests/scheduling_planning/jobshop/invalid_problems/invalid_problem_8_2.jsp
nb_jobs nb_machines optimal
4 4 36 0
Times
1 3 6 7
5 4 8 9
5 5 5 3
3 3 9 10
Machines
3 1 2 4
3 4 1 2
2 1 3 4
2 4 1 3
Starts
3 23 28 33 
1 6 15 23 
0 1 8 14 
0 3 6 15 